--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -194,15 +194,15 @@
 	"config_autorole_button_disable": "Disable Autorole",
 
 	"config_quick_reasons_header": "{{emote_wrench}} **Quick Reasons Configuration**\n{{emote_edit}}*This setting controls all the quick reasons shown when using context commands.*",
-	"config_quick_reasons_placeholder_select": "Select Quick Reason(s) to remove",
-	"config_quick_reason_placeholder_none": "No Quick Reasons found",
-	"config_quick_reason_prompt": "{{emote_wrench}} Please enter the new Quick Reason",
-	"config_quick_reason_too_long": "{{emote_fail}} The Quick Reason cannot be longer than **100** characters",
-	"config_quick_reason_already_exists": "{{emote_fail}} The Quick Reason `{{reason}}` already exists in the list",
-	"config_quick_reason_success": "{{emote_success}} Successfully added the Quick Reason `{{reason}}` to the list",
-	"config_quick_reason_remove_success": "{{emote_success}} Successfully removed the selected Quick Reason(s) from the list",
-	"config_quick_reason_button_add": "Add Quick Reason",
-	"config_quick_reason_button_remove": "Remove Quick Reason(s)",
+	"config_quick_reasons_placeholder_select": "Select quick reason(s) to remove",
+	"config_quick_reason_placeholder_none": "No quick reasons found",
+	"config_quick_reason_prompt": "{{emote_wrench}} Please enter the new quick reason",
+	"config_quick_reason_too_long": "{{emote_fail}} The quick reason cannot be longer than **100** characters",
+	"config_quick_reason_already_exists": "{{emote_fail}} The quick reason `{{reason}}` already exists in the list",
+	"config_quick_reason_success": "{{emote_success}} Successfully added the quick reason `{{reason}}` to the list",
+	"config_quick_reason_remove_success": "{{emote_success}} Successfully removed the selected quick reason(s) from the list",
+	"config_quick_reason_button_add": "Add quick reason",
+	"config_quick_reason_button_remove": "Remove quick reason(s)",
 
 	"config_timezone_header": "{{emote_wrench}} **Timezone Configuration**\n{{emote_edit}}*This setting controls the timezone that the bot will use when sending logs.*",
 	"config_timezone_placeholder": "Current Timezone: {{timezone}}",
