--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -129,6 +129,7 @@
 	"config_main_options": {
 		"language": "Language",
 		"actions_on_info": "Actions on Info",
+		"manuel_nickname_inf": "Manuel nickname infractions",
 		"prefix": "Prefix",
 		"roles_on_leave": "Roles on Leave",
 		"automod": "Automod",
@@ -140,6 +141,7 @@
 	"config_main_options_descriptions": {
 		"language": "Change the language of the bot",
 		"actions_on_info": "Configure the actions on info setting",
+		"manuel_nickname_inf": "Changing a users nickname results in a infraction",
 		"prefix": "Configure the prefix of the bot",
 		"roles_on_leave": "Configure the roles on leave setting",
 		"automod": "Configure the Automod settings",
@@ -151,6 +153,7 @@
 	"config_main_placeholder": "Select a category to modify",
 	"config_actions_on_info_header": "{{emote_wrench}} **Actions on Info Configuration**\n{{emote_edit}}*This setting controls whether or not action buttons will be displayed when you info a user.*",
 	"config_roles_on_leave_header": "{{emote_wrench}} **Roles on Leave Configuration**\n{{emote_edit}}*This setting controls whether or not the bot will log user's roles when they leave the server.*",
+	"config_manuel_nickname_infractions": "{{emote_wrench}} **Manuel nickname infractions Configuration**\n{{emote_edit}}*This settings controls wheter or not the bot will track infractions on users when a mod gives them an nickname*",
 	"config_language_header": "{{emote_wrench}} **Language Configuration**\n{{emote_edit}}*This setting controls the language that the bot will use when responding to commands.*",
 	"config_language_placeholder": "Select a language",
 	"config_language_success": "{{emote_success}} Successfully changed the server language to `{{language}}`",
