--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -120,6 +120,7 @@
 		"GUILD_PUBLIC_THREAD": "thread",
 		"GUILD_PRIVATE_THREAD": "private thread",
 		"GUILD_STAGE_VOICE": "stage channel",
+		"GUILD_DIRECTORY": "guild directory",
 		"UNKNOWN": "channel"
 	},
 	"config_button_enable": "Enable",
