lang file missed

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -464,6 +464,8 @@
 	"infraction_interaction_description": "Click to view more info",
 	"commands_help": "You can find all the commands Bulbbot offers over **[here](https://docs.bulbbot.rocks/command-list)**",
 	"help_unable_to_find_command": "`{{commandName}}` is not a valid command, for a full list of commands visit our website <https://docs.bulbbot.rocks/command-list>",
+	"messageinfo_channel_not_found": "{{emote_warn}} Unable to find the channel in the messagelink you provided.",
+	"messageinfo_message_not_found": "{{emote_warn}} Unable to find the message in the messagelink you provided.",
 	"sc_about_name": "about",
 	"sc_about_desc": "Returns more information about the bot",
 	"sc_commands_name": "commands",
