Migrated inviteinfo.ts

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -53,7 +53,8 @@
 	"global_not_in_voice": "{{emote_fail}} User **{{target.tag}}** `({{target.id}})` is currently not connected to any Voice Channels!",
 	"global_error": {
 		"unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
-		"automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined."
+		"automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined.",
+		"inviteinfo_guild_or_member_null": "{{emote_fail}} An error occurred while attempting to parse the selected Invite. The Invite Guild, Interaction Guild or Interaction Member could not be resolved to non-null values."
 	},
 	"global_words": { "none": "none", "some": "some", "all": "all", "and": "and", "or": "or", "yes": "yes", "no": "no", "confirm": "confirm", "cancel": "cancel" },
 	"global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
