some missed strings

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -489,14 +489,14 @@
 	"sc_uptime_desc": "Returns the current uptime of the bot",
 	"sc_charinfo_name": "charinfo",
 	"sc_charinfo_desc": "Returns information about the characters provided",
-	"sc_charinfo_string_name": "string",
-	"sc_charinfo_string_desc": "The characters you want to info",
+	"sc_charinfo_characters_name": "string",
+	"sc_charinfo_characters_desc": "The characters you want to info",
 	"sc_inviteinfo_name": "inviteinfo",
 	"sc_inviteinfo_desc": "Returns some useful info about a server from the invite link",
 	"sc_inviteinfo_invite_name": "invite",
 	"sc_inviteinfo_invite_desc": "The invite link of the server you want to info",
-	"sc_server_name": "server",
-	"sc_server_desc": "Returns some useful information about the current server",
+	"sc_serverinfo_name": "server",
+	"sc_serverinfo_desc": "Returns some useful information about the current server",
 	"sc_userinfo_name": "userinfo",
 	"sc_userinfo_desc": "Returns some useful info about a user",
 	"sc_userinfo_user_name": "user",
@@ -765,8 +765,8 @@
 	"sc_channelinfo_channel_desc": "The channel you want to get information about",
 	"sc_messageinfo_name": "messageinfo",
 	"sc_messageinfo_desc": "Returns information about the message provided",
-	"sc_messageinfo_message_name": "message",
-	"sc_messageinfo_message_desc": "The message you want to get info about",
+	"sc_messageinfo_message_link_name": "message",
+	"sc_messageinfo_message_link_desc": "The message you want to get info about",
 	"sc_roleinfo_name": "roleinfo",
 	"sc_roleinfo_desc": "Returns information about the role provided",
 	"sc_roleinfo_role_name": "role",
