Migrated kick.ts

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -8,6 +8,9 @@
 	"global_cannot_convert": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
 	"global_cannot_convert_special": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.",
 	"global_not_found": "{{emote_fail}} Could not find the specified {{type}}. Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
+	"global_not_found_new": {
+		"member": "{{emote_fail}} Could not find the specified **Member**!\n{{emote_wrench}} *Ensure the member is still in the server or that you're providing a valid Member*"
+	},
 	"global_not_found_types": {
 		"user": "user",
 		"member": "member",
@@ -54,7 +57,8 @@
 	"global_error": {
 		"unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
 		"automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined.",
-		"inviteinfo_guild_or_member_null": "{{emote_fail}} An error occurred while attempting to parse the selected Invite. The Invite Guild, Interaction Guild or Interaction Member could not be resolved to non-null values."
+		"inviteinfo_guild_or_member_null": "{{emote_fail}} An error occurred while attempting to parse the selected Invite. The Invite Guild, Interaction Guild or Interaction Member could not be resolved to non-null values.",
+		"kick_inf_id_null": "{{emote_fail}} An error occurred while trying to kick the user. The returned Infraction ID was null or the Member could not be kicked."
 	},
 	"global_words": { "none": "none", "some": "some", "all": "all", "and": "and", "or": "or", "yes": "yes", "no": "no", "confirm": "confirm", "cancel": "cancel" },
 	"global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
