--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -58,7 +58,7 @@
 		"unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
 		"automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined.",
 		"inviteinfo_guild_or_member_null": "{{emote_fail}} An error occurred while attempting to parse the selected Invite. The Invite Guild, Interaction Guild or Interaction Member could not be resolved to non-null values.",
-		"kick_inf_id_null": "{{emote_fail}} An error occurred while trying to kick the user. The returned Infraction ID was null or the Member could not be kicked."
+		"db_inf_id_null": "{{emote_fail}} An error occurred while trying to kick the user. The returned Infraction ID was null or the Member could not be kicked."
 	},
 	"global_words": { "none": "none", "some": "some", "all": "all", "and": "and", "or": "or", "yes": "yes", "no": "no", "confirm": "confirm", "cancel": "cancel" },
 	"global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
@@ -326,7 +326,7 @@
 	"serverinfo_emotes_too_many": " and **{{guild_emotes_left}}** more",
 	"serverinfo_emotes_none": "No emotes",
 	"action_success": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} for **{{reason}}** `[#{{infraction_id}}]`",
-	"action_success_temp": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} until **{{until}}** for **{{reason}}** `[#{{infraction_id}}]`",
+	"action_success_temp": "{{emote_success}} **{{target.tag}}** `({{target.id}})` has been {{action}} until **<t:{{until}}:F>** for **{{reason}}** `[#{{infraction_id}}]`",
 	"action_success_multi": "{{emote_success}} {{full_list}} have been {{action}} for **{{reason}}**",
 	"action_multi_less_than_2": "{{emote_warn}} Selected less than 2 targets. Executing normal {{action}} instead",
 	"action_multi_no_targets": "{{emote_fail}} No valid targets were found in your message.\n{{emote_wrench}} **Correct usage:** {{usage}}",
