--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -459,6 +459,7 @@
 	"infraction_search_not_found": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has no infractions!",
 	"infraction_list_not_found": "{{emote_warn}} This server does not seem to have any infractions!",
 	"infraction_claim_success": "{{emote_success}} You have claimed responsibility over infraction **#{{infraction_id}}**",
+	"infraction_claim_fail": "{{emote_fail}} You already have responsibility over infraction **#{{infraction_id}}**",
 	"infraction_update_success": "{{emote_success}} Infraction **#{{infraction_id}}** has been updated!",
 	"archive_too_much": "{{emote_fail}} You can only request a max of 5000 entries",
 	"archive_header_format": "Time, channelId-messageId | AuthorTag (AuthorId): Content/Embeds/Stickers/Attachments\n",
