--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -461,6 +461,7 @@
 	"infraction_claim_success": "{{emote_success}} You have claimed responsibility over infraction **#{{infraction_id}}**",
 	"infraction_claim_fail": "{{emote_fail}} You already have responsibility over infraction **#{{infraction_id}}**",
 	"infraction_update_success": "{{emote_success}} Infraction **#{{infraction_id}}** has been updated!",
+	"infraction_claim_not_owned": "{{emote_fail}} You do not own infraction **#{{infraction_id}}**\n{{emote_wrench}} **Tip:** You can update an infraction after claiming it using the `/infraction claim` command",
 	"archive_too_much": "{{emote_fail}} You can only request a max of 5000 entries",
 	"archive_header_format": "Time, channelId-messageId | AuthorTag (AuthorId): Content/Embeds/Stickers/Attachments\n",
 	"archive_success": "{{emote_success}} Archived data from `{{place}}` found **{{amountOfMessages}}** messages (search amount: {{searchAmount}})",
