--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -385,7 +385,7 @@
 	"prune_confirm_prune": "{{emote_warn}} Are you sure you want to prune **{{prunesize}}** members?",
 	"prune_successful": "{{emote_success}} Successfully pruned **{{prune}}** members",
 	"prune_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` pruned **{{prune}}** members for **{{reason}}** with these settings, days **{{days}}**, roles **{{roles}}**",
-	"verification_level_select": "Please select your verification level then press save",
+	"verifcation_level_community_none": "{{emote_success}} Verification level cannot be set to `none` for community servers",
 	"verification_level_success": "{{emote_success}} Server verification level changed to `{{level}}`",
 	"nickname_success": "{{emote_success}} Nickname of **{{target.tag}}** `({{target.id}})` has been changed from `{{nick_old}}` to `{{nick_new}}` for **{{reason}}** `[#{{infraction_id}}]`",
 	"nickname_remove_success": "{{emote_success}} Nickname removed from **{{target.tag}}** `({{target.id}})` for **{{reason}}** `[#{{infraction_id}}]`",
