--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -59,7 +59,8 @@
 		"unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
 		"automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined.",
 		"inviteinfo_guild_or_member_null": "{{emote_fail}} An error occurred while attempting to parse the selected Invite. The Invite Guild, Interaction Guild or Interaction Member could not be resolved to non-null values.",
-		"db_inf_id_null": "{{emote_fail}} An error occurred while trying to kick the user. The returned Infraction ID was null or the Member could not be kicked."
+		"db_inf_id_null": "{{emote_fail}} An error occurred while trying to kick the user. The returned Infraction ID was null or the Member could not be kicked.",
+		"settings_db_null": "{{emote_fail}} An error occurred while trying to retrieve the settings. The returned settings object was null or undefined."
 	},
 	"global_words": { "none": "none", "some": "some", "all": "all", "and": "and", "or": "or", "yes": "yes", "no": "no", "confirm": "confirm", "cancel": "cancel" },
 	"global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
