en-US.json update because it did not follow

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -403,7 +403,7 @@
 	"ping_latency": "Bot latency is **{{latency_bot}}ms**\nWebSocket latency is **{{latency_ws}}ms**",
 	"uptime_uptime": "The current uptime is **{{uptime}}**",
 	"license_license": "📜 This bot is licensed under the Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0) license, for more info see the full license **[here](https://github.com/TeamBulbbot//Bulbbot/blob/master/LICENSE)**",
-	"privacy_policy": "📜 View the privacy policy of the bot **[here](https://docs.bulbbot.rocks/privacy-policy/)**",
+	"privacy_policy": "📜 View the privacy policy of the bot **[here](https://docs.bulbbot.rocks/legal/privacy-policy)**",
 	"github_source_code": "{{emote_github}} Bulbbot is a fully open source project. You can find the source code at our GitHub repository **[here](https://github.com/TeamBulbbot//Bulbbot)**",
 	"invite_content": "Links to invite Bulbbot to your server",
 	"remind_list_none": "{{emote_warn}} You have not set any reminders",
@@ -477,8 +477,8 @@
 	"infraction_interaction_reply": "{{emote_warn}} **{{target.tag}}'s** `({{target.id}})` infractions",
 	"infraction_interaction_placeholder": "No Infractions Selected",
 	"infraction_interaction_description": "Click to view more info",
-	"commands_help": "You can find all the commands Bulbbot offers over **[here](https://docs.bulbbot.rocks/command-list)**",
-	"help_unable_to_find_command": "`{{commandName}}` is not a valid command, for a full list of commands visit our website <https://docs.bulbbot.rocks/command-list>",
+	"commands_help": "You can find all the commands Bulbbot offers over **[here](https://docs.bulbbot.rocks/basics/command-list)**",
+	"help_unable_to_find_command": "`{{commandName}}` is not a valid command, for a full list of commands visit our website <https://docs.bulbbot.rocks/basics/command-list>",
 	"messageinfo_channel_not_found": "{{emote_warn}} Unable to find the channel in the messagelink you provided.",
 	"messageinfo_message_not_found": "{{emote_warn}} Unable to find the message in the messagelink you provided.",
 	"sc_about_name": "about",
